Added App module and forecast controller

--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="bundle/lib.css" />
     <link rel="stylesheet" href="bundle/gaj.css" />
 </head>
-<body>
-	Test
+<body ng-app="gajWeatherApp">
+	<div ng-controller="forecastCtrl">{{message}}<div>
     <script src="bundle/lib.js"></script>
     <script src="bundle/gaj.js"></script>
 </body>
