--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="bundle/gaj.css" />
 </head>
 <body ng-app="gajWeatherApp">
-	<div ng-controller="forecastCtrl">{{message}}<div>
+	<div ng-controller="forecastCtrl">{{forecast | json}}<div>
     <script src="bundle/lib.js"></script>
     <script src="bundle/gaj.js"></script>
 </body>
