--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,33 @@
     <link rel="stylesheet" href="bundle/gaj.css" />
 </head>
 <body ng-app="gajWeatherApp">
-	<div ng-controller="forecastCtrl">{{forecast | json}}<div>
+<div class="container" ng-controller="forecastCtrl">
+    <div class="search-weather">
+        <div class="row">
+            <div class="col-xs-12">
+                <div>
+                    <form role="form">
+                        <span>
+                            <input ng-model="location" type="text" class="search-input" id="location" placeholder="Your city name">
+                        </span>
+                        <button ng-click="getForecastByLocation(location)" type="submit" class="search-btn">Search</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="weather-data">
+        <div class="row">
+            <div class="col-sm-12">
+                <div class="">
+                    <h4>
+                        Next 5 day forescast for {{forecast.city.name}}
+                    </h4>
+                </div>
+            </div>
+        </div>
+    </div>    
+ </div>   
     <script src="bundle/lib.js"></script>
     <script src="bundle/gaj.js"></script>
 </body>
