--- a/src/index.html
+++ b/src/index.html
@@ -32,7 +32,17 @@
                     </h4>
                 </div>
             </div>
-        </div>
+            <div class="col-sm-12" ng-repeat="forecastItem in forecast.list">
+				<div class="weather-container">
+				    <div>
+				        <div>{{parseDate(forecastItem.dt)}}</div>
+				        <img ng-src="{{getIconUrl(forecastItem.weather[0].icon)}}" />
+				        <div>{{forecastItem.temp.day}}&#176;C</div>
+				        <div>{{forecastItem.weather[0].description}}</div>
+				    </div>
+				</div>
+            </div>            
+        </div>        
     </div>    
  </div>   
     <script src="bundle/lib.js"></script>
